--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "library",
     "version": "v0.0.1",
     "license": "MIT",
+    "minimum-stability": "dev"
     "require": {},
     "authors": [
         {
