--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "version": "v0.0.1",
     "license": "MIT",
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
     "require": {},
     "authors": [
         {
