--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "version": "v0.0.1",
     "license": "MIT",
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {},
     "authors": [
         {
